Fixed minor bug with overflowing image thumbnails in project list page when displaying image alt tags. Minor code layout tweak for routes.js.

--- a/src/styles/project_list.css
+++ b/src/styles/project_list.css
@@ -10,6 +10,8 @@
     box-shadow: 2px 2px 4px 2px #999999;
     -moz-box-shadow: 2px 2px 4px 2px #999999;
     -webkit-box-shadow: 2px 2px 4px 2px #999999;
+    height: 240px;
+    width: 240px;
 }
 
 .projects .views-row-even .img_container {
